# forthan

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  words.fs
include/forthan/: Compiler.h  Interpreter.h  Parser.h
src/: CMakeLists.txt  Compiler.cc  Interpreter.cc  Parser.cc
test/: CMakeLists.txt  Compiler.cc  Interpreter.cc  Parser.cc
tools/cli_parser/: CMakeLists.txt
tools/cli_parser/src/: CMakeLists.txt  main.cc
